--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,22 @@ body {
 }
 
 h1 {
-  color: black;
+  color: #263555;
   font-size: 54px;
   font-family: 'Dorsa', sans-serif;
 }
 
-h2 {
+h2, h3 {
   text-transform: uppercase;
   font-family: 'Pathway Gothic One', sans-serif;
+}
+
+h2 {
   font-size: 24px;
 }
 
 h3 {
-  text-transform: uppercase;
   font-size: 16px;
-  font-family: 'Pathway Gothic One', sans-serif;
 }
 
 .wrapper {
@@ -36,16 +37,16 @@ h3 {
   text-align: center;
   vertical-align: middle;
   display: inline-block;
-  color: snow;
+  color: #ffffff;
 }
 
 .wrapper header ul li:hover {
-  color: black;
+  color: #263555;
 }
 
 .wrapper header ul li .logo :hover {
   background-color: #38afe5;
-  color: snow;
+  color: #ffffff;
   border-radius: 50%;
   height: 82px;
   width: auto;
@@ -76,13 +77,13 @@ h3 {
     height: 0;
     border-style: solid;
     border-width: 0 3px 8px 3px;
-    border-color: transparent transparent snow transparent;
+    border-color: transparent transparent #ffffff transparent;
     margin-top: -8px;
     margin-left: -4px;
 }
 
 .wrapper header .dropdown-content li {
-    color: black;
+    color: #263555;
     text-decoration: none;
     width: auto;
     padding: 10px 10px 10px 10px;
@@ -93,12 +94,12 @@ h3 {
 
 .wrapper header .dropdown-content li:hover {
   background-color: #38afe5;
-  color: snow;
+  color: #ffffff;
 }
 
 header ul li .dropdown:hover .dropdown-content {
     display: block;
-    background-color: snow;
+    background-color: #ffffff;
 }
 
 .dropdown ul li p {
@@ -108,7 +109,7 @@ header ul li .dropdown:hover .dropdown-content {
 }
 
 header ul li .logo {
-  background-color: snow;
+  background-color: #ffffff;
   width: 100px;
   position: relative;
   height: 100px;
@@ -123,7 +124,7 @@ header ul li .logo {
   padding-top: 18px;
 }
 .wrapper .slider {
-  background-color: snow;
+  background-color: #ffffff;
   height: 570px;
   padding: 60px;
 }
@@ -147,7 +148,7 @@ header ul li .logo {
 .wrapper .slider h2 {
   padding-right: 20px;
   background-color: #38afe5;
-  color: snow;
+  color: #ffffff;
 }
 
 .wrapper .slider img {
@@ -167,7 +168,7 @@ header ul li .logo {
   bottom: 120px;
   height: 80px;
   width: 40px;
-  color: snow;
+  color: #ffffff;
   text-align: center;
   border-bottom-left-radius: 80px;
   border-top-left-radius: 80px;
@@ -176,7 +177,7 @@ header ul li .logo {
 
 .switch-left:hover{
   background-color: #3ac2ff;
-  color: black;
+  color: #263555;
 }
 
 .switch-right {
@@ -185,7 +186,7 @@ header ul li .logo {
   bottom: 200px;
   height: 80px;
   width: 40px;
-  color: snow;
+  color: #ffffff;
   vertical-align: middle;
   border-bottom-right-radius: 80px;
   border-top-right-radius: 80px;
@@ -203,23 +204,23 @@ header ul li .logo {
 }
 
 a:link {
-    color: snow;
+    color: #ffffff;
 }
 
 a:visited {
-  color: snow;
+  color: #ffffff;
 }
 
 .switch-right:hover {
   background-color: #3ac2ff;
-  color: black;
+  color: #263555;
 }
 
 .wrapper .destinations {
   width: 880px;
   padding-left: 60px;
   padding-right: 60px;
-  background: snow;
+  background: #ffffff;
 }
 
 .wrapper .destinations div {
@@ -254,13 +255,11 @@ a:visited {
   width: 0;
   height: 276px;
   margin-bottom: 3px;
-  /*transition: .9s ease;*/
 }
 
 .container:hover .overlay {
   width: 50%;
 }
-
 .destinations .container .text h2 {
   white-space: nowrap;
   text-transform: uppercase;
@@ -276,22 +275,28 @@ a:visited {
 }
 
 .destinations .container .text p {
+  font-family: Arial, sans-serif;
+  font-size: 80%;
+  font-weight: normal;
   color: white;
   overflow: hidden;
   top: 80px;
   padding-left: 10px;
   padding-right: 10px;
+  letter-spacing: 1px;
 }
 
 button{
-  margin-left: 70px;
+  margin-left: 60px;
+  margin-top: 20px;
+  border-radius: 6px;
 }
 
 .wrapper footer {
   width: auto;
   padding-top: 100px;
   heignt: 100px;
-  background-color: snow;
+  background-color: #ffffff;
 }
 
 .wrapper footer .up-page {
@@ -308,5 +313,5 @@ button{
   margin-left: 8px;
   text-align: center;
   vertical-align: middle;
-  color: snow;
+  color: #ffffff;
 }
